manifest/objects/Apttus__DocumentVersion__c.object
<CustomObject>
    <description>Represents a document version</description>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the agreement associated with the document version</description>
        <inlineHelpText>ID of the agreement associated with the document version</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Document Versions</relationshipLabel>
        <relationshipName>DocumentVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CheckoutById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the user who checked out this document version</description>
        <inlineHelpText>ID of the user who checked out this document version</inlineHelpText>
        <label>Checkout By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Version</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CheckoutDate__c</fullName>
        <description>Date when this document was checked out</description>
        <inlineHelpText>Date when this document was checked out</inlineHelpText>
        <label>Checkout Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__CheckoutVersionDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the checked out version detail</description>
        <inlineHelpText>ID of the checked out version detail</inlineHelpText>
        <label>Checkout Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Document Versions (Checkout)</relationshipLabel>
        <relationshipName>CheckoutVersionDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CustomObjectId__c</fullName>
        <description>ID of the custom object associated with the document version</description>
        <inlineHelpText>ID of the custom object associated with the document version</inlineHelpText>
        <label>Custom Object Id (Deprecated)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentType__c</fullName>
        <description>Document type represents type of document in agreement life cycle</description>
        <inlineHelpText>Document type represents type of document in agreement life cycle</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement Document</fullName>
                </value>
                <value>
                    <fullName>Supporting Document</fullName>
                </value>
                <value>
                    <fullName>Executed Document</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__FileSize__c</fullName>
        <description>File size of the latest document version</description>
        <formula>Apttus__LatestVersionId__r.Apttus__FileSize__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>File size of the latest document version</inlineHelpText>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__IsTransient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient versions are created .</description>
        <inlineHelpText>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing.</inlineHelpText>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__LatestInsightScore__c</fullName>
        <description>Total Risk Score of the latest Document</description>
        <inlineHelpText>Total Risk Score of the latest Document</inlineHelpText>
        <label>Latest Insight Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__LatestReviewCycleStatus__c</fullName>
        <description>holds the status of the latest review cycle for this document.</description>
        <label>Latest Review Cycle Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__LatestVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to latest version object</description>
        <inlineHelpText>Lookup to latest version object</inlineHelpText>
        <label>Latest Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Document Versions</relationshipLabel>
        <relationshipName>DocumentVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__LatestVersion__c</fullName>
        <description>Represents the most recent version of this document</description>
        <inlineHelpText>Represents the most recent version of this document</inlineHelpText>
        <label>Latest Version</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Notes__c</fullName>
        <description>The notes associated with the version</description>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__NumberOfVersions__c</fullName>
        <description>Indicates the number of detail versions associated with the version</description>
        <inlineHelpText>Indicates the number of detail versions associated with the version</inlineHelpText>
        <label>Number Of Versions</label>
        <summaryForeignKey>Apttus__DocumentVersionDetail__c.Apttus__DocumentVersionId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus__PendingReviews__c</fullName>
        <description>Pending Reviews Count</description>
        <inlineHelpText>Count of Review Cycles Pending.</inlineHelpText>
        <label>Pending Reviews</label>
        <summarizedField>Apttus__DocumentVersionDetail__c.Apttus__PendingReviews__c</summarizedField>
        <summaryForeignKey>Apttus__DocumentVersionDetail__c.Apttus__DocumentVersionId__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus__ReferenceId__c</fullName>
        <description>A unique external reference identifier</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique external reference identifier</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ReviewStatus__c</fullName>
        <description>Review Status</description>
        <formula>HYPERLINK(&apos;/apex/Apttus__ParallelReviewCycle?id=&apos;+  Id  , Apttus__LatestReviewCycleStatus__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Review Status</inlineHelpText>
        <label>Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the template associated with the version</description>
        <inlineHelpText>ID of the template associated with the version</inlineHelpText>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Document Versions</relationshipLabel>
        <relationshipName>DocumentVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Title__c</fullName>
        <description>Title of the document</description>
        <inlineHelpText>Title of the document</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__View__c</fullName>
        <description>View latest version of the document</description>
        <formula>Apttus__LatestVersionId__r.Apttus__View__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>View latest version of the document</inlineHelpText>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Document Version</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>